--- a/notebooks/diffusion_playground_indicators-Copy2.ipynb
+++ b/notebooks/diffusion_playground_indicators-Copy2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
     "\n",
     "\n",
     "sizes = ((32,), (32, 32), (64, 64, 64), (64, 64, 64))\n",
-    "module_names = [\"obstacle_id\", \"object_id\", \"subtask_id\", \"robot_id\"]\n",
+    "module_names = [\"obstacle_id\", \"object_id\", \"subtask_id\", \"robot_id\"] #obstacle 14, object 14, subtask 17, robo-state 32\n",
     "module_input_names = [\"obstacle-state\", \"object-state\", \"goal-state\", \"robot0_proprio-state\"]\n",
     "\n",
     "module_assignment_positions = [observation_positions[key] for key in module_names]\n",
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,6 +529,7 @@
     "            for j in self.graph_structure[graph_depth]:  # nodes (modules) at this depth\n",
     "                if len(input_val.shape) == 1:\n",
     "                    x_pre = input_val[self.module_inputs[j]]\n",
+    "                    #print(\"X_pre: \", x_pre)\n",
     "                    onehot = input_val[self.module_assignment_positions[j]]\n",
     "                    #print(\"j\", j)\n",
     "                    #print(\"One hot: \", onehot)\n",
@@ -538,13 +539,15 @@
     "                    # Ensure module_index is a scalar integer\n",
     "                    #module_index = module_index.item()  # Access the first element if it's an array\n",
     "                    #print(f\"module_index after fix: {module_index}\")  # Verify the type and value\n",
-    "                    print(\"What is it trying to choose from: \",self.module_list[j][\"pre_interface\"])\n",
+    "                    #print(\"What is it trying to choose from: \",self.module_list[j][\"pre_interface\"])\n",
     "                    x_pre = self.module_list[j][\"pre_interface\"][module_index](x_pre)\n",
     "                    if x is not None:\n",
     "                        x_pre = torch.cat((x, x_pre), dim=-1)\n",
     "                    x_post.append(\n",
     "                        self.module_list[j][\"post_interface\"][module_index](x_pre)\n",
     "                    )\n",
+    "                    print(\"Pre interface: \", self.module_list[j][\"pre_interface\"])\n",
+    "                    print(\"Post interface: \", self.module_list[j][\"post_interface\"])\n",
     "                else:\n",
     "                    x_post_tmp = torch.empty(input_val.shape[0], self.sizes[j][-1]).to(\n",
     "                        device #JUST FIXED CAPITAL DEVICE TO NORMAL DEVICE\n",
@@ -659,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -831,11 +834,10 @@
      "output_type": "stream",
      "text": [
       "module_index: tensor([2])\n",
-      "What is it trying to choose from:  ModuleList(\n",
+      "Pre interface:  ModuleList(\n",
       "  (0-3): 4 x Identity()\n",
       ")\n",
-      "module_index: tensor([0])\n",
-      "What is it trying to choose from:  ModuleList(\n",
+      "Post interface:  ModuleList(\n",
       "  (0-3): 4 x Sequential(\n",
       "    (0): Linear(in_features=14, out_features=32, bias=True)\n",
       "    (1): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
@@ -843,7 +845,22 @@
       "  )\n",
       ")\n",
       "module_index: tensor([0])\n",
-      "What is it trying to choose from:  ModuleList(\n",
+      "Pre interface:  ModuleList(\n",
+      "  (0-3): 4 x Sequential(\n",
+      "    (0): Linear(in_features=14, out_features=32, bias=True)\n",
+      "    (1): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
+      "    (2): ReLU()\n",
+      "  )\n",
+      ")\n",
+      "Post interface:  ModuleList(\n",
+      "  (0-3): 4 x Sequential(\n",
+      "    (0): Linear(in_features=64, out_features=32, bias=True)\n",
+      "    (1): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
+      "    (2): ReLU()\n",
+      "  )\n",
+      ")\n",
+      "module_index: tensor([0])\n",
+      "Pre interface:  ModuleList(\n",
       "  (0-3): 4 x Sequential(\n",
       "    (0): Linear(in_features=17, out_features=64, bias=True)\n",
       "    (1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
@@ -853,8 +870,15 @@
       "    (5): ReLU()\n",
       "  )\n",
       ")\n",
+      "Post interface:  ModuleList(\n",
+      "  (0-3): 4 x Sequential(\n",
+      "    (0): Linear(in_features=96, out_features=64, bias=True)\n",
+      "    (1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+      "    (2): ReLU()\n",
+      "  )\n",
+      ")\n",
       "module_index: tensor([1])\n",
-      "What is it trying to choose from:  ModuleList(\n",
+      "Pre interface:  ModuleList(\n",
       "  (0-3): 4 x Sequential(\n",
       "    (0): Linear(in_features=32, out_features=64, bias=True)\n",
       "    (1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
@@ -865,14 +889,19 @@
       "    (6): Linear(in_features=64, out_features=64, bias=True)\n",
       "    (7): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
       "    (8): ReLU()\n",
+      "  )\n",
+      ")\n",
+      "Post interface:  ModuleList(\n",
+      "  (0-3): 4 x Sequential(\n",
+      "    (0): Linear(in_features=128, out_features=77, bias=True)\n",
+      "    (1): Identity()\n",
       "  )\n",
       ")\n",
       "module_index: tensor([2])\n",
-      "What is it trying to choose from:  ModuleList(\n",
+      "Pre interface:  ModuleList(\n",
       "  (0-3): 4 x Identity()\n",
       ")\n",
-      "module_index: tensor([0])\n",
-      "What is it trying to choose from:  ModuleList(\n",
+      "Post interface:  ModuleList(\n",
       "  (0-3): 4 x Sequential(\n",
       "    (0): Linear(in_features=14, out_features=32, bias=True)\n",
       "    (1): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
@@ -880,7 +909,22 @@
       "  )\n",
       ")\n",
       "module_index: tensor([0])\n",
-      "What is it trying to choose from:  ModuleList(\n",
+      "Pre interface:  ModuleList(\n",
+      "  (0-3): 4 x Sequential(\n",
+      "    (0): Linear(in_features=14, out_features=32, bias=True)\n",
+      "    (1): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
+      "    (2): ReLU()\n",
+      "  )\n",
+      ")\n",
+      "Post interface:  ModuleList(\n",
+      "  (0-3): 4 x Sequential(\n",
+      "    (0): Linear(in_features=64, out_features=32, bias=True)\n",
+      "    (1): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
+      "    (2): ReLU()\n",
+      "  )\n",
+      ")\n",
+      "module_index: tensor([0])\n",
+      "Pre interface:  ModuleList(\n",
       "  (0-3): 4 x Sequential(\n",
       "    (0): Linear(in_features=17, out_features=64, bias=True)\n",
       "    (1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
@@ -890,8 +934,15 @@
       "    (5): ReLU()\n",
       "  )\n",
       ")\n",
+      "Post interface:  ModuleList(\n",
+      "  (0-3): 4 x Sequential(\n",
+      "    (0): Linear(in_features=96, out_features=64, bias=True)\n",
+      "    (1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+      "    (2): ReLU()\n",
+      "  )\n",
+      ")\n",
       "module_index: tensor([1])\n",
-      "What is it trying to choose from:  ModuleList(\n",
+      "Pre interface:  ModuleList(\n",
       "  (0-3): 4 x Sequential(\n",
       "    (0): Linear(in_features=32, out_features=64, bias=True)\n",
       "    (1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
@@ -902,6 +953,12 @@
       "    (6): Linear(in_features=64, out_features=64, bias=True)\n",
       "    (7): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
       "    (8): ReLU()\n",
+      "  )\n",
+      ")\n",
+      "Post interface:  ModuleList(\n",
+      "  (0-3): 4 x Sequential(\n",
+      "    (0): Linear(in_features=128, out_features=77, bias=True)\n",
+      "    (1): Identity()\n",
       "  )\n",
       ")\n",
       "torch.Size([180])\n"
